--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 	<section>
 		<input id="upload" type="file" accept="image/*" hidden>
-		<label for="upload"><i class="fas fa-upload"></i> Choisir un fichier</label>
+		<label for="upload"><i class="fas fa-upload"></i>Please VOID me !</label>
 		<canvas id="canvas"></canvas>
 		<a id="download"></a>
 		<section>
