--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body style="background-image: url('blackhole.jpeg');>
 	<section>
 		<input id="upload" type="file" accept="image/*" hidden>
 		<label for="upload"><i class="fas fa-upload"></i>Please VOID me !</label>
