--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 
-<body style="background-image: url('blackhole.jpeg');">
+<body style="background-image: url('blackhole.jpeg'); background-repeat:no-repeat; background-size:cover;">
 	<section>
 		<input id="upload" type="file" accept="image/*" hidden>
 		<label for="upload"><i class="fas fa-upload"></i>Please VOID me !</label>
 		<canvas id="canvas"></canvas>
 		<a id="download"></a>
 		<section>
-			<script src="script.js"></script>
+		<script src="script.js"></script>
 </body>
 
 </html>
